# LoanRatio-Master

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USERGUIDE.md  pyproject.toml  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  qa.yml
app/: __init__.py  calculator.py  exporter.py  main.py  storage.py
qa/: run_qa.sh
static/: index.html
tests/: test_api.py  test_calculator.py
